--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
     "recharts": "^2.15.3",
