feat: creat project and create layout

--- a/package.json
+++ b/package.json
@@ -3,18 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ant-design/icons": "^5.6.1",
-    "antd": "^5.26.0",
-    "axios": "^1.9.0",
-    "file-saver": "^2.0.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^7.6.2",
-    "recharts": "^2.15.3",
-    "web-vitals": "^2.1.4",
-    "xlsx": "^0.18.5",
-    "zustand": "^5.0.5"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "dev": "vite",
